fix spacing in spotlight body text

--- a/sass/modules/_spotlight.scss
+++ b/sass/modules/_spotlight.scss
@@ -63,6 +63,9 @@
 
   &__body-text {
     @extend .f-item__body-text--major;
+    &:not(:last-child) {
+      margin-bottom: 1em;
+    }
   }
 
 }
